--- a/style.css
+++ b/style.css
@@ -18,11 +18,11 @@ h3,
 h4,
 h5,
 h6 {
-	font-family: 'Gameplay', monospace;
+	font-family: 'Gameplay', monospace; /* Sets all headings to 'Gameplay' font. */
 }
 
 h1 {
-	text-shadow: .1em .1em 0 rgba(0, 0, 0, 1.0);
+	text-shadow: .1em .1em 0 rgba(0, 0, 0, 1.0); /*Adds a text shadow to h1*/
 }
 
 a {
@@ -35,11 +35,11 @@ a:hover {
 }
 
 .primary-color-border {
-	border: 2px solid #C2B3FF;
+	border: 2px solid #C2B3FF; /* Adds a 2px border set to the primary colour */
 }
 
 .primary-color-background {
-	background-color: #C2B3FF;
+	background-color: #C2B3FF; /* Sets the element background to the primary colour */
 }
 
 .navbar {
@@ -114,12 +114,4 @@ a:hover {
 
 .testimonial-card p {
 	max-width: 30ch;
-}
-
-.form-control {
-	color: white;
-}
-
-.row p {
-	max-width: 65ch;
 }
